Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Matt is a lawyer who is a tech enthusiast.  After years of ignoring a burning desire to learn to code, he finally took a number of different courses. Here are some of his thoughts. </p>
